<package>
    <name>neo_common2</name>
    <version>1.0.0</version>
    <description>
		Common Neobotix functionality to be shared with other packages.
    </description>
    <author>Max Wittal</author>
    <author>Pradheep Krishna Padmanabhan</author>
    <maintainer email="ros@neobotix.de">Neobotix GmbH</maintainer>
    <maintainer email="wittal@neobotix.de">Max Wittal</maintainer>
    <maintainer email="padmanabhan@neobotix.de">Max Wittal</maintainer>
    <license>BSD</license>
    <url>https://github.com/neobotix/neo_common2</url>
	
    <buildtool_depend>ament_cmake</buildtool_depend>
	
    <export>
        <!-- Other tools can request additional information be placed here -->
        <build_type>ament_cmake</build_type>
    </export>
</package>


