<?xml version="1.0"?>
<package format="3">
  <name>neo_msgs2</name>
  <version>0.1.0</version>
  <description>
	This package contains messages (ROS-2) for neobotix mobile robots.
  </description>
  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author>Pradheep Krishna M P</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
